# Lazarus

.github/workflows/: ci.yml
algebra/src/: polynomial_ring.rs  zq.rs
labrador/: Cargo.toml
labrador/src/: algebra.rs  jl_projection.rs  lib.rs  matrix.rs  prover.rs  struct.rs  structs.rs  verifier.rs
labrador/src/core/: outer_commitment.rs
