[package]
name = "labrador"
version = "0.1.0"
edition = "2018"

[[example]]
name = "main"
required_features = ["test"]
path = "src/example/main.rs"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.8.5"
lark_algebra = { git = "https://github.com/haopining/larkworks", branch = "main", package = "lark_algebra" }
lark_crypto = { git = "https://github.com/haopining/larkworks", branch = "main", package = "lark_crypto_primitives" }
